# blue-rectangle

./: CHANGELOG.md  README.md  blue-rectangle.cabal
app/: CollisionUtils.hs  DPSwitch.hs  GameCore.hs  IdentityList.hs  Levels.hs  Main.hs  Types.hs
