cabal-version:      2.4
name:               blue-rectangle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             AntanasKal
maintainer:         a.kalkauskas@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
executable dunai-playground
    main-is:          Main.hs
    other-modules:    DPSwitch
                    , IdentityList
                    , GameCore
                    , CollisionUtils
                    , Types
                    , Levels

    build-depends:    base ^>=4.16.3.0
                    , sdl2 >= 2.2.0
                    , sdl2-image
                    , sdl2-mixer
                    , sdl2-ttf
                    , text
                    , dunai
                    , data-interval
                    , bearriver
    hs-source-dirs:   app
    default-language: Haskell2010
